Added quote image link to the 'links' response section
